<resources>
    <string name="app_name">디미밥</string>

    <string name="sample_date_title">1955년 2월 24일 화요일</string>

    <string name="title_breakfast">아침</string>
    <string name="title_lunch">점심</string>
    <string name="title_dinner">저녁</string>
    <string name="title_snack">간식</string>

    <string name="no_breakfast">아침이 제공되지 않습니다.</string>
    <string name="no_lunch">점심이 제공되지 않습니다.</string>
    <string name="no_dinner">저녁이 제공되지 않습니다.</string>
    <string name="no_snack">간식이 제공되지 않습니다.</string>

    <string name="developer">Designed &amp; developed by 15HD 박민서</string>
    <string name="special_thanks">Launcher icon designed by 15WP 이준환</string>

    <string name="open_license">오픈소스 라이선스</string>
    <string name="gson_name">Gson</string>
    <string name="gson_content">Copyright 2008 Google Inc. Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="retrofit_name">Retrofit 2.0</string>
    <string name="retrofit_content">Copyright 2013 Square, Inc. Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>

    <string name="app_version">버전 1.0.0</string>
    <string name="todo">TODO</string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>
</resources>
