<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#F0F0F0">

        <TextView
            android:id="@+id/tomorrowDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/sample_date_title"
            android:textColor="@color/colorDisabled"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/titleBreakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_breakfast"
                android:textColor="@color/colorDisabled"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tomorrowBreakfastMenuContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.8"
                android:text="@string/no_breakfast"
                android:textColor="@color/colorDisabled"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleBreakfast" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/titleBreakfast"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/titleBreakfast"
                app:srcCompat="@drawable/ic_lamp_off" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/titleLunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_lunch"
                android:textColor="@color/colorDisabled"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tomorrowLunchMenuContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.8"
                android:text="@string/no_lunch"
                android:textColor="@color/colorDisabled"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleLunch" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/titleLunch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/titleLunch"
                app:srcCompat="@drawable/ic_lamp_off" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/titleDinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_dinner"
                android:textColor="@color/colorDisabled"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tomorrowDinnerMenuContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.8"
                android:text="@string/no_dinner"
                android:textColor="@color/colorDisabled"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleDinner" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/titleDinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/titleDinner"
                app:srcCompat="@drawable/ic_lamp_off" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/titleSnack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_snack"
                android:textColor="@color/colorDisabled"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tomorrowSnackMenuContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.8"
                android:text="@string/no_snack"
                android:textColor="@color/colorDisabled"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleSnack" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/titleSnack"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/titleSnack"
                app:srcCompat="@drawable/ic_lamp_off" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</LinearLayout>